--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@
 .header__navbar-item {
 	margin: 0 8px;
 	position: relative;
+	min-height: 20px;
 }
 
 .header__navbar-item,
@@ -28,7 +29,15 @@
 	font-weight: 300;
 }
 
+.header__navbar-item,
+.header__navbar-item-link,
+.header__navbar-icon {
+	display: inline-flex;
+	align-items: center;
+}
+
 .header__navbar-item:hover,
+.header__navbar-icon-link:hover,
 .header__navbar-item-link:hover {
 	color: rgba(255, 255, 255, 0.7);
 	cursor: pointer;
@@ -47,9 +56,21 @@
 	right: -9px;
 	top: 50%;
 	transform: translateY(-50%);
+	cursor: default;
+	opacity: 1;
 }
 
 .header__navbar-icon-link {
 	color: var(--white-color);
 	text-decoration: none;
+}
+
+.header__navbar-icon {
+	font-size: 1.8rem;
+	margin: 0 4px;
+}
+
+.header__navbar-icon--no-pointer {
+	cursor: text;
+	color: var(--white-color);
 }
