--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,11 @@
 	align-items: center;
 }
 
+.header__navbar-item:hover .header__qr,
+.header__navbar-item:hover .header__qr::before {
+	display: block;
+}
+
 .header__navbar-item:hover,
 .header__navbar-icon-link:hover,
 .header__navbar-item-link:hover {
@@ -73,4 +78,44 @@
 .header__navbar-icon--no-pointer {
 	cursor: text;
 	color: var(--white-color);
+}
+
+/* Header QR code */
+.header__qr {
+	width: 186px;
+	background-color: var(--white-color);
+	position: absolute;
+	display: none;
+	top: 118%;
+	left: 0;
+	padding: 8px;
+	border-radius: 2px;
+	animation: fadeIn ease-in 0.3s;
+}
+
+.header__qr::before {
+	position: absolute;
+	content: "";
+	display: none;
+	width: 100%;
+	height: 20px;
+	top: -7%;
+	left: 0;
+}
+
+.header__qr-img {
+	width: 100%;
+}
+
+.header__qr-apps {
+	display: flex;
+	justify-content: space-between;
+	margin: 0 11px 0 10px;
+}
+
+.header__qr-link {
+}
+
+.header__qr-download-img {
+	height: 16px;
 }
