huy9_header_noti_css: Css for notify p1

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -119,3 +119,83 @@
 .header__qr-download-img {
 	height: 16px;
 }
+
+/* Header notification */
+.header__notify {
+	position: absolute;
+	top: 118%;
+	width: 404px;
+	right: 0;
+	background-color: var(--white-color);
+	border: 1px solid #d3d3d3;
+}
+
+.header__notify-header {
+	height: 40px;
+	background-color: var(--white-color);
+}
+
+.header__notify-header h3 {
+	color: #999;
+	margin: 0 0 0 12px;
+	font-weight: 400;
+	font-size: 1.4rem;
+	line-height: 40px;
+}
+
+.header__notify-list {
+	padding-left: 0px;
+}
+
+.header__notify-item {
+}
+
+.header__notify-item:hover {
+	background-color: #f7f7f7;
+}
+
+.header__notify-item--viewed {
+	background-color: rgb(238, 77, 45, 0.05);
+}
+
+.header__notify-link {
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+	padding: 12px;
+}
+
+.header__notify-img {
+	width: 48px;
+	object-fit: contain;
+}
+
+.header__notify-info {
+	/* display: flex;
+	flex-direction: column; */
+	padding-left: 12px;
+}
+
+.header__notify-name {
+	display: block;
+	font-size: 1.4rem;
+	font-weight: 400;
+	color: var(--black-color);
+}
+
+.header__notify-description {
+	display: block;
+	font-size: 1.2rem;
+	margin-top: 4px;
+	color: #756f6e;
+}
+
+.header__notify-footer {
+	text-align: center;
+}
+
+.header__notify-footer-btn {
+	text-decoration: none;
+	color: var(--text-color);
+	margin: 4px 16px;
+}
