--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,6 +48,10 @@
 	cursor: pointer;
 }
 
+.header__navbar-item:hover .header__notify {
+	display: block;
+}
+
 .header__navbar-item--strong {
 	font-weight: 450;
 }
@@ -128,6 +132,10 @@
 	right: 0;
 	background-color: var(--white-color);
 	border: 1px solid #d3d3d3;
+	cursor: default;
+	transform-origin: top right;
+	animation: headerNotifyGrowth ease-in 0.25s;
+	display: none;
 }
 
 .header__notify-header {
@@ -141,6 +149,7 @@
 	font-weight: 400;
 	font-size: 1.4rem;
 	line-height: 40px;
+	user-select: none;
 }
 
 .header__notify-list {
@@ -180,22 +189,27 @@
 	display: block;
 	font-size: 1.4rem;
 	font-weight: 400;
-	color: var(--black-color);
+	color: var(--text-color);
 }
 
 .header__notify-description {
 	display: block;
 	font-size: 1.2rem;
-	margin-top: 4px;
+	margin-top: 10px;
 	color: #756f6e;
 }
 
 .header__notify-footer {
-	text-align: center;
+	display: flex;
+	/* justify-content: center; */
 }
 
 .header__notify-footer-btn {
 	text-decoration: none;
 	color: var(--text-color);
-	margin: 4px 16px;
+	padding: 16px 42px;
+	font-size: 1.4rem;
+	font-weight: 400;
+	width: 100%;
+	text-align: center;
 }
