huy12_header_noti_css_p4

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,6 +135,7 @@
 	cursor: default;
 	transform-origin: top right;
 	animation: headerNotifyGrowth ease-in 0.25s;
+	will-change: opacity, transform;
 	display: none;
 }
 
