--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -54,3 +54,28 @@ html {
 		opacity: 1;
 	}
 }
+
+/* Modal */
+.modal {
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	display: flex;
+}
+
+.modal__overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.4);
+	z-index: 1;
+}
+
+.modal__body {
+	background-color: var(--white-color);
+	border-radius: 5px;
+	margin: auto;
+	z-index: 2;
+}
