--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -90,14 +90,35 @@ html {
 	border-radius: 3px;
 	cursor: pointer;
 	font-size: 1.4rem;
+	color: var(--text-color);
+	padding: 0 10px;
 }
 
 .btn:hover {
-	background-color: rgba(0, 0, 0, 0.1);
-	opacity: 0.9;
+	background-color: rgba(0, 0, 0, 0.05);
+	opacity: 1;
+}
+
+.btn.btn--size-s {
+	height: 32px;
+	min-width: 142px;
+	font-size: 12px;
 }
 
 .btn.btn--primary {
 	color: var(--white-color);
 	background-color: var(--primary-color);
+}
+
+.btn.btn--with-icon {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.btn--disabled,
+.btn--disabled:hover {
+	color: #ccc;
+	background-color: #999;
+	cursor: default;
 }
