--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -56,6 +56,18 @@ html {
 	}
 }
 
+@keyframes growth {
+	from {
+		transform: scale(var(--growth-from));
+		opacity: 0;
+	}
+
+	to {
+		transform: scale(var(--growth-to));
+		opacity: 1;
+	}
+}
+
 /* Modal */
 .modal {
 	position: fixed;
@@ -64,6 +76,7 @@ html {
 	left: 0;
 	bottom: 0;
 	display: flex;
+	animation: fadeIn linear 0.1s;
 }
 
 .modal__overlay {
@@ -75,10 +88,13 @@ html {
 }
 
 .modal__body {
+	--growth-from: 0.7;
+	--growth-to: 1;
 	background-color: var(--white-color);
 	border-radius: 5px;
 	margin: auto;
 	z-index: 2;
+	animation: growth linear 0.1s;
 }
 
 .btn {
