--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,18 @@
 .header {
-	height: 120px;
+	height: var(--header-height);
 	background-image: linear-gradient(0, #fe6433, #f53e2d);
 }
 
 .header__navbar {
 	display: flex;
 	justify-content: space-between;
+	height: var(--navbar-height);
 }
 
 .header__navbar-list {
 	list-style: none;
 	padding-left: 0px;
-	margin-top: 4px;
+	margin-top: 4px 0 0 0;
 }
 
 .header__navbar-item {
@@ -378,4 +379,38 @@
 .auth-form__help > a:last-child {
 	/* Cần trợ giúp */
 	color: #939393;
+}
+
+/* Header with search */
+.header-with-search {
+	height: var(--header-with-search-height);
+	display: flex;
+	align-items: center;
+}
+
+.header__logo {
+	width: 200px;
+}
+
+.header__logo-img {
+	width: 150px;
+}
+
+.header__search {
+	height: 40px;
+	flex: 1;
+	border-radius: 5px;
+	background-color: var(--white-color);
+}
+
+.header__cart {
+	width: 150px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.header__card-icon {
+	color: var(--white-color);
+	font-size: 3rem;
 }
