--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,7 +54,9 @@
 }
 
 .header__navbar-item--strong {
+	position: relative;
 	font-weight: 450;
+	bottom: 2px;
 }
 
 .header__navbar-item--separate::after {
@@ -386,6 +388,7 @@
 	height: var(--header-with-search-height);
 	display: flex;
 	align-items: center;
+	padding: 0 6px;
 }
 
 .header__logo {
@@ -397,10 +400,12 @@
 }
 
 .header__search {
-	height: 40px;
+	height: var(--header__search);
 	flex: 1;
 	border-radius: 5px;
 	background-color: var(--white-color);
+	display: flex;
+	align-items: center;
 }
 
 .header__cart {
@@ -413,4 +418,108 @@
 .header__card-icon {
 	color: var(--white-color);
 	font-size: 3rem;
+	cursor: pointer;
+}
+
+.header__search-input {
+	height: var(--header__search);
+	border-color: transparent;
+	outline-style: none;
+	font-size: 1.4rem;
+	padding: 0 16px;
+	border-radius: 5px;
+	flex: 1;
+}
+
+.header__search-select {
+	padding: 0 6px;
+	position: relative;
+	cursor: pointer;
+}
+
+.header__search-select::after {
+	position: absolute;
+	content: "";
+	height: calc(var(--header__search) + 8px);
+	left: 0;
+	width: 100%;
+	top: -11px;
+}
+
+.header__search-select:hover .header__search-option {
+	display: block;
+}
+
+.header__search-label {
+	font-size: 1.4rem;
+	color: var(--text-color);
+}
+
+.header__search-icon {
+	font-size: 1.4rem;
+	font-weight: 200;
+	color: var(--text-color);
+	margin: 0 16px 0 8px;
+	position: relative;
+	top: 2px;
+}
+
+.header__search-btn {
+	background-color: var(--primary-color);
+	border: none;
+	height: 34px;
+	border-radius: 3px;
+	width: 60px;
+	margin-right: 3px;
+	cursor: pointer;
+}
+
+.header__search-btn:hover {
+	background-color: #fb6445;
+}
+
+.header__search-btn-icon {
+	font-size: 1.4rem;
+	color: var(--white-color);
+}
+
+.header__search-option {
+	position: absolute;
+	list-style-type: none;
+	padding-left: 0;
+	width: 120px;
+	right: 0;
+	top: 124%;
+	box-shadow: 0 1px 2px #e0e0e0;
+	overflow: hidden;
+	display: none;
+	animation: fadeIn ease-in 0.2s;
+}
+
+.header__search-option-item {
+	background-color: var(--white-color);
+	border-radius: 3px;
+	padding: 8px 8px;
+	cursor: pointer;
+	/* display: none; */
+}
+
+.header__search-option-item:hover {
+	background-color: #fbfbfb;
+}
+
+.header__search-option-item span {
+	font-size: 1.4rem;
+	color: var(--text-color);
+}
+
+.header__search-option-item i {
+	font-size: 1rem;
+	color: var(--primary-color);
+	margin: 0 12px 0 8px;
+	display: none;
+}
+
+.header__search-option-item--active i {
+	display: inline-block;
 }
