--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -486,6 +486,7 @@
 }
 
 .header__search-history-item a {
+	display: block;
 	color: var(--text-color);
 	text-decoration: none;
 	font-size: 1.4rem;
