--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -415,10 +415,57 @@
 	align-items: center;
 }
 
-.header__card-icon {
+.header__cart-wrap {
 	color: var(--white-color);
-	font-size: 3rem;
 	cursor: pointer;
+	padding: 8px 8px;
+	position: relative;
+}
+
+.header__cart-wrap:hover .header__cart-list {
+	display: block;
+}
+
+.header__card-icon {
+	font-size: 3rem;
+}
+
+.header__cart-list {
+	position: absolute;
+	top: 100%;
+	right: 0px;
+	background-color: var(--white-color);
+	width: 410px;
+	border-radius: 2px;
+	box-shadow: 0 2px 10px #ccc;
+	display: none;
+}
+
+.header__cart-list::before {
+	content: "";
+	position: absolute;
+	top: -10px;
+	right: 2px;
+	border-width: 0 20px 20px 24px;
+	border-style: solid;
+	border-color: transparent transparent var(--white-color) transparent;
+}
+
+.header__cart-list--no-cart {
+	text-align: center;
+	padding: 10px 0 0;
+}
+
+.header__cart-no-card-img {
+	width: 54%;
+}
+
+.header__cart-list--no-cart-text {
+	font-size: 1.4rem;
+	font-weight: 500;
+	color: var(--text-color);
+	margin-top: 16px;
+	text-align: center;
 }
 
 .header__search-input-wrap {
