--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -449,6 +449,7 @@
 	top: 100%;
 	right: 0px;
 	background-color: var(--white-color);
+	color: var(--text-color);
 	width: 410px;
 	border-radius: 2px;
 	box-shadow: 0 2px 10px #ccc;
@@ -465,8 +466,9 @@
 	border-color: transparent transparent var(--white-color) transparent;
 }
 
-.header__cart-list--no-cart {
-	padding: 10px 0 0;
+.header__cart-list--no-cart,
+.header__cart-list--has-cart {
+	padding: 0 0 0;
 	cursor: default;
 }
 
@@ -491,9 +493,98 @@
 	display: none;
 }
 
+.header__cart-heading {
+	color: #999;
+	margin-left: 12px;
+	font-weight: 400;
+}
+
 .header__search-input-wrap {
 	flex: 1;
 	position: relative;
+}
+
+.header__cart-list-item {
+	list-style: none;
+	padding-left: 0;
+}
+
+.header__cart-item {
+	display: flex;
+	cursor: pointer;
+}
+
+.header__cart-item:hover {
+	background-color: #f8f8f8;
+}
+
+.header__cart-img {
+	width: 44px;
+	height: 42px;
+	margin: 8px 12px;
+}
+
+.header__cart-info {
+	width: 100%;
+	margin: 12px 12px;
+}
+
+.header__cart-item-head {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.header__cart-item-name {
+	font-size: 1.4rem;
+	font-weight: 500;
+	margin: 0;
+}
+
+.header__cart-item-price-wrap {
+}
+
+.header__cart-item-price {
+	color: var(--primary-color);
+	font-weight: 400;
+	font-size: 1.4rem;
+}
+
+.header__cart-item-multipl {
+	margin: 0 4px;
+}
+
+.header__cart-item-quantity {
+}
+
+.header__cart-item-body {
+	color: #999;
+	display: flex;
+	justify-content: space-between;
+	margin-top: 3px;
+}
+
+.header__cart-item-desc {
+	font-size: 1.4rem;
+}
+
+.header__cart-item-delete {
+	color: var(--text-color);
+	font-size: 1.6rem;
+}
+
+.header__cart-item-delete:hover {
+	color: var(--primary-color);
+}
+
+.header__cart-view-cart {
+	float: right;
+	margin: 0 12px 12px 0;
+	width: 124px;
+}
+
+.header__cart-view-cart:hover {
+	background-color: #f05d41;
 }
 
 .header__search-input {
