--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -821,3 +821,61 @@
 .header__search-option-item--active i {
 	display: inline-block;
 }
+
+/* App Container */
+.app__container {
+	background-color: #f5f5f5;
+}
+
+.category {
+	border-radius: 2px;
+	background-color: var(--white-color);
+}
+
+.category__heading {
+	color: var(--text-color);
+	font-size: 1.7rem;
+	padding: 12px 16px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.category__heading-icon {
+	font-size: 1.4rem;
+	margin-right: 4px;
+}
+
+.category-list {
+	list-style-type: none;
+	padding: 0 0 8px 10px;
+}
+
+.category-item {
+}
+
+.category-item--active .category-item__link {
+	color: var(--primary-color);
+	position: relative;
+}
+
+.category-item--active .category-item__link::before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 4%;
+	border: 4px;
+	border-style: dashed;
+	transform: translateY(-50%);
+	border-color: transparent transparent transparent var(--primary-color);
+}
+
+.category-item__link {
+	text-decoration: none;
+	color: var(--text-color);
+	font-size: 1.6rem;
+	padding: 6px 16px;
+	display: block;
+}
+
+.category-item__link:hover {
+	color: var(--primary-color);
+}
