huy29_build_sort_filter_prod

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -827,6 +827,10 @@
 	background-color: #f5f5f5;
 }
 
+.app__content {
+	padding-top: 36px;
+}
+
 .category {
 	border-radius: 2px;
 	background-color: var(--white-color);
@@ -837,6 +841,7 @@
 	font-size: 1.7rem;
 	padding: 12px 16px;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+	margin-top: 0;
 }
 
 .category__heading-icon {
@@ -879,3 +884,5 @@
 .category-item__link:hover {
 	color: var(--primary-color);
 }
+
+/* Home Sort + Filter */
