--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -164,3 +164,73 @@ html {
 	background-color: #999;
 	cursor: default;
 }
+
+/* Select Ịnput */
+.select-input {
+	height: 34px;
+	padding: 0 12px;
+	border-radius: 2px;
+	background-color: var(--white-color);
+	min-width: 120px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	min-width: 200px;
+	cursor: pointer;
+	position: relative;
+}
+
+.select-input:hover .select-input__list {
+	display: block;
+}
+
+.select-input__label {
+	font-size: 1.4rem;
+}
+
+.select-input-icon {
+	font-size: 1.4rem;
+	color: rgb(131, 131, 131);
+	position: relative;
+	top: 1px;
+}
+
+.select-input__list {
+	position: absolute;
+	top: 25px;
+	left: 0;
+	right: 0;
+	background-color: var(--white-color);
+	border-radius: 2px;
+	padding: 14px 16px;
+	list-style-type: none;
+	display: none;
+}
+
+.select-input__list::before {
+	content: "";
+	position: absolute;
+	top: -5%;
+	left: 0%;
+	display: block;
+	width: 100%;
+	height: 5px;
+}
+
+.select-input__item {
+}
+
+.select-input__item + .select-input__item {
+	margin-top: 12px;
+}
+
+.select-input__link {
+	text-decoration: none;
+	color: var(--text-color);
+	font-size: 1.4rem;
+	font-weight: 400;
+}
+
+.select-input__link:hover {
+	color: var(--primary-color);
+}
