--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -886,3 +886,68 @@
 }
 
 /* Home Sort + Filter */
+.home-filter {
+	background-color: rgba(0, 0, 0, 0.04);
+	display: flex;
+	align-items: center;
+	padding: 12px 22px;
+	border-radius: 3px;
+}
+
+.home-filter__label {
+	color: var(--text-color);
+	font-size: 1.4rem;
+	margin-right: 16px;
+}
+
+.home-filter__btn {
+	margin-right: 12px;
+	margin-left: 0 !important;
+	min-width: 90px;
+}
+
+.home-filter__page {
+	display: flex;
+	margin-left: auto;
+	align-items: center;
+}
+
+.home-filter__page-num {
+	font-size: 1.4rem;
+	margin-right: 12px;
+	color: var(--text-color);
+	font-weight: 500;
+}
+.home-filter__page-current {
+	color: var(--primary-color);
+}
+
+.home-filter__page-control {
+	border-radius: 2px;
+	overflow: hidden;
+	width: 72px;
+	height: 36px;
+	display: flex;
+	margin-right: 12px;
+}
+
+.home-filter__page-btn {
+	flex: 1;
+	display: flex;
+	background-color: var(--white-color);
+	text-decoration: none;
+}
+
+.home-filter__page-btn + .home-filter__page-btn {
+	border-left: 1px solid #eee;
+}
+
+.home-filter__page-btn--disabled {
+	cursor: default;
+	background-color: #f7f4f4;
+}
+
+.home-filter__page-icon {
+	margin: auto;
+	font-size: 1.4rem;
+}
