huy33_css_favourite_label

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -954,6 +954,7 @@
 
 /* Product Item */
 .home-product-item {
+	position: relative;
 	background-color: var(--white-color);
 	margin-top: 10px;
 }
@@ -1060,6 +1061,37 @@ i.home-product-item__action-like-icon-fill {
 }
 
 .home-product-item__favourite {
+	position: absolute;
+	top: 10px;
+	left: -3px;
+	color: var(--primary-color);
+	background-color: currentColor;
+	padding: 2px 4px;
+	font-weight: 500;
+	font-size: 1.3rem;
+	border-color: var(--primary-color);
+	border-top-right-radius: 3px;
+	border-bottom-right-radius: 3px;
+}
+
+.home-product-item__favourite::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: -3px;
+	border-top: 3px solid currentColor;
+	border-left: 3px solid transparent;
+	filter: brightness(60%);
+}
+
+.home-product-item__favourite i {
+	color: var(--white-color);
+	margin-right: 4px;
+	font-size: 0.9rem;
+}
+
+.home-product-item__favourite span {
+	color: var(--white-color);
 }
 
 .home-product-item__sale-off {
