--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -185,6 +185,7 @@ html {
 	min-width: 200px;
 	cursor: pointer;
 	position: relative;
+	z-index: 1;
 }
 
 .select-input:hover .select-input__list {
