--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -172,6 +172,8 @@
 	padding: 8px;
 	border-radius: 2px;
 	animation: fadeIn ease-in 0.3s;
+	z-index: 1;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
 }
 
 .header__qr::before {
@@ -529,6 +531,7 @@
 	border-radius: 2px;
 	box-shadow: 0 2px 10px #ccc;
 	display: none;
+	z-index: 1;
 }
 
 .header__cart-list::before {
@@ -582,6 +585,8 @@
 .header__cart-list-item {
 	list-style: none;
 	padding-left: 0;
+	max-height: 56vh;
+	overflow-y: auto;
 }
 
 .header__cart-item {
@@ -614,6 +619,13 @@
 	font-size: 1.4rem;
 	font-weight: 500;
 	margin: 0;
+	flex: 1;
+	padding-right: 16px;
+	max-height: 3.2rem;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
 }
 
 .header__cart-item-price-wrap {
@@ -685,6 +697,7 @@
 	border-radius: 3px;
 	box-shadow: 0 1px 2px #e0e0e0;
 	display: none;
+	z-index: 1;
 }
 
 .header__search-history::before {
@@ -792,6 +805,7 @@
 	overflow: hidden;
 	display: none;
 	animation: fadeIn ease-in 0.2s;
+	z-index: 1;
 }
 
 .header__search-option-item {
@@ -963,8 +977,8 @@
 	text-decoration: none;
 	background-color: var(--white-color);
 	margin-top: 10px;
-	border-bottom-left-radius: 2px;
-	border-bottom-right-radius: 2px;
+	border-radius: 2px;
+	border-radius: 2px;
 	box-shadow: 0 0.0625rem 0.125rem 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -979,6 +993,8 @@
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: center;
+	border-top-left-radius: 2px;
+	border-top-right-radius: 2px;
 }
 
 .home-product-item__name {
@@ -1124,6 +1140,7 @@ i.home-product-item__action-like-icon-fill {
 	text-align: center;
 	font-weight: 600;
 	font-size: 1.4rem;
+	border-top-right-radius: 2px;
 }
 
 .home-product-item__sale-off::before {
